# django-class-202410

./: pyproject.toml
core/: settings.py  urls.py
first/: views.py
first/templates/: say_hello.html
templates/: _alert.html  base.html
todo/: admin.py  forms.py  models.py  views.py
todo/migrations/: 0001_initial.py  0002_item_end_time.py
todo/templates/: project_create.html  project_list.html
