[tool.poetry]
name = "django-class-202410"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.2"
django-extensions = "^3.2.3"


[tool.poetry.group.dev.dependencies]
djlint = "^1.35.2"
ipython = "^8.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.djlint]
profile = "django"
max_blank_lines = 1
line_break_after_multiline_tag = true
